--- a/testing/testing-checking suwo functions.Rmd
+++ b/testing/testing-checking suwo functions.Rmd
@@ -540,10 +540,10 @@ usethis::use_coverage(type = c("codecov"))
 
 covr::codecov(token = "94049bb4-baf6-4851-a830-405d9ae77a41")
 
-# usethis::use_github_action("test-coverage")
+usethis::use_github_action("test-coverage")
 
-# generate codemeta.json (only run once)
-# codemetar::write_codemeta()
+#generate codemeta.json (only run once)
+#codemetar::write_codemeta()
 
 
 ## pckgcheck
