--- a/README.Rmd
+++ b/README.Rmd
@@ -1,4 +1,4 @@
-  ---
+---
 title: "suwo: access nature media repositories through R"
 output: github_document
 editor_options: 
@@ -45,5 +45,5 @@ library(suwo)
 
 Please cite [suwo](https://github.com/maRce10/suwo) as follows:
 
-Araya-Salas, M., & Elizondo-Calvo, J. 2023. suwo: access nature media repositories through R. R package version 0.1.0.
+Araya-Salas, M., & J. Elizondo-Calvo. 2023. suwo: access nature media repositories through R. R package version 0.1.0.
 
