--- a/vignettes/suwo_vignette.Rmd
+++ b/vignettes/suwo_vignette.Rmd
@@ -26,6 +26,7 @@ install.packages("suwo")
 
 #load package
 library(suwo)
+library(htmlwidgets)
 
 
 ```
@@ -34,97 +35,50 @@ To install the latest developmental version from github you will need the R pack
 ```{r}
 
 # install package
-remotes::install_github("maRce10/suwo")
+#remotes::install_github("maRce10/suwo")
 
 #load packages
-library(suwo)
+#library(suwo)
 
 ```
 
 Finding data using suwo follows a basic sequence. First a database is selected and the corresponding query function is used to search for the data needed.
 
-```{r setup}
-library(suwo)
-#install.packages("dplyr")
-library("dplyr")
-#install.packages('raster')
-library(raster) # For raster creation and manipulation
-#install.packages('ggplot2')
-library(ggplot2)
-#install.packages('maptools')
-library(maptools)
-#install.packages('ggspatial')
-library(ggspatial)
-#install.packages('sf')
-library(sf)
-#install.packages('ggnewscale')
-library(ggnewscale)
-#install.packages('plotly')
-library(plotly)
-#install.packages("tidyverse")
-library(tidyverse)
-#install.packages("viridis")
-library(viridis)
-#install.packages("hrbrthemes")
-library(hrbrthemes)
-#install.packages("mapdata")
-library(mapdata)
-#install.packages("sp")
-library(sp)     # For spatial data handling
-```
 
 A search query consists of a term (species name), a data type that corresponds to the type of data the user wishes to search for. Depending on the search function, this can vary from pictures, videos, sounds. The all_data parameter determines if all the data present for the search is included or if a summary of the metadata is generated as the output of the query.
 
-```{r}
+```{r, eval = FALSE}
 
-Calo <- query_inaturalist(term = "Calochortus tolmiei", type = "still image", all_data = FALSE )
+Calo <- query_inaturalist(term = "Calochortus plummerae", type = "still image", all_data = FALSE )
 Calo2 <- Calo
 Calo <- subset(Calo2, select = c("species","latitude","longitude"))
 colnames(Calo)[1]<-'species'
 Calo$species <- as.factor(Calo$species)
 
+
+saveRDS(Calo, "~/Downloads/calo_data.RDS")
 ```
+
+```{r, eval = TRUE, echo = FALSE}
+
+Calo <- readRDS("~/Downloads/calo_data.RDS")
+
+```
+
+
 
 ```{r}
 
-states_usa <- map_data("state")
-states_mexico <- map_data("world", region = "Mexico")
-states_canada <- map_data("world", region = "Canada")
+Calo_map <- leaflet::leaflet(Calo)
 
+
+htmlwidgets::saveWidget(widget = Calo_map,
+                        file = "Calo_map.html",
+                        selfcontained = TRUE)
+  
 ```
+<!--html_preserve-->
+<iframe src = "~/Documents/GitHub/suwo/Calo_map.html" width="400" height = "500"> </iframe>
+<!--html_preserve-->
 
-```{r}
-
-Calochort <- ggplot() +
-  geom_map(data = states_usa, map = states_usa,
-           aes(x = long, y = lat, map_id = region),
-           color = 'black', fill = "azure", size = 0.3) +  # Add state borders for the USA
-  geom_map(data = states_mexico, map = states_mexico,
-           aes(x = long, y = lat, map_id = region),
-           color = 'black', fill = "honeydew", size = 0.3) +  # Add country borders for Mexico
-  geom_map(data = states_canada, map = states_canada,
-           aes(x = long, y = lat, map_id = region),
-           color = 'black', fill = "lavender", size = 0.3) +  # Add country borders for Canada
-  scale_fill_gradient(name = 'Elevation (m)', low = 'white', high = 'black') +
-  coord_sf(xlim = c(-125, -90), ylim = c(12, 50)) +
-  geom_point(mapping = aes(x = as.numeric(longitude),
-                           y = as.numeric(latitude),
-                           colour = species,
-                           fill = species,
-                           shape = species),
-             data = Calo, cex = 0.25) +
-  scale_shape_manual(name = 'Calochortus', values = c(22, 21, 24, 23)) +
-  scale_color_manual(values = c('grey26', '#000000', '#000000', '#000000')) +
-  scale_fill_manual(values = c('grey76', '#1E88E5', '#FF880A', '#8C0808')) +
-  theme_bw() +
-  theme(panel.grid.major = element_blank(),  # Remove major gridlines
-        panel.grid.minor = element_blank())  # Remove minor gridlines
-
-```
-
-```{r}
-p=ggplotly(Calochort)  
-#htmlwidgets::saveWidget(as_widget(p), "Calochortus.html")
-
-```
-
+asdasd
