--- a/vignettes/suwo_vignette.Rmd
+++ b/vignettes/suwo_vignette.Rmd
@@ -107,4 +107,47 @@ Updated_query  <- update_query(Previous_Query = df1)
 
 ```
 
+Metadata can be used to download the available files from the data stored from the query. This can be done utilizing the function download_media. This function may take a longer time to run depending on the available resources and the amount of data that needs to be downloaded.
+
+```{r}
+
+download_media(query_result, path = getwd())
+
+```
+
+When checking between repository metadata, users may use the function detect_duplicates to identify and eliminate the repeated observations. This function can return a merged data frame without the repeated observations, or just identify the repetitions.
+
+```{r}
+
+Merged_Dataframe <- detect_duplicates(dataframe_1 = df1, dataframe_2 = df2)
+
+```
+
+The GBIF repository dataset may me consulted to filter what repositories the user would like to consult specifically. This may be viewed by downloading the data using the function check_gbif_dataset. This function downloads the csv of the complete repository list available on GBIF.
+
+```{r}
+
+check_gbif_datasets()
+
+```
+
+Users may display the coordinate information of the observations from a query using the map_locations function. This will allow the user to show the locations of the observations on a map.
+
+```{r}
+
+metadata <- query_xenocanto(term = "Phaethornis anthophilus")
+
+# create map
+map_locations(metadata)
+
+```
+
+A query search may require a taxon code to correctly display the species observation data. This information can be consulted using the taxon_code_search function that consults the clements database
+
+```{r}
+
+taxon_code_turdus <- taxon_code_search(species_name = 'Turdus iliacus', taxon_code_df = clements_data)
+
+```
+
 
