--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,8 @@ editor_options:
   
 <!-- <img src="man/figures/suwo_sticker.png" alt="suwo logo" align="right" width = "25%" height="25%"/> -->
 
+# suwo <a href="https://marce10.github.io/suwo"><img src="man/figures/logo.png" align="right" height="139" alt="suwo website" /></a>
+
 [suwo](https://github.com/maRce10/suwo) is intended streamline searching/downloading
 of nature media files (e.g. audios, photos) from online repositories.
 
