--- a/README.Rmd
+++ b/README.Rmd
@@ -21,9 +21,7 @@ editor_options:
   
 <!-- <img src="man/figures/suwo_sticker.png" alt="suwo logo" align="right" width = "25%" height="25%"/> -->
 
-[suwo]
-
-<a href="https://marce10.github.io/suwo" target="_blank"><img src="man/figures/logo.png" align="right" height="139" alt="suwo website" /></a>
+[Photo](img src="man/figures/logo.png" align="right" height="139" alt="suwo website")
 
 
 [suwo](https://github.com/maRce10/suwo) is intended streamline searching/downloading
