--- a/README.Rmd
+++ b/README.Rmd
@@ -21,8 +21,7 @@ editor_options:
   
 <!-- <img src="man/figures/suwo_sticker.png" alt="suwo logo" align="right" width = "25%" height="25%"/> -->
 
-[Photo](img src="man/figures/logo.png" align="right" height="139" alt="suwo website")
-
+<img src="man/figures/logo.png" alt="suwo logo" align="right" width = "25%" height="25%"/>
 
 [suwo](https://github.com/maRce10/suwo) is intended streamline searching/downloading
 of nature media files (e.g. audios, photos) from online repositories.
