--- a/testing/testing-checking suwo functions.Rmd
+++ b/testing/testing-checking suwo functions.Rmd
@@ -662,7 +662,7 @@ load("~/Dropbox/R_package_testing/suwo/R/sysdata.rda")
 source("./R/taxon_code_search.R")
 
 setwd(tempdir())
-df1 <- query_macaulay(term = 'Glaucis dohrnii')
+df1 <- query_macaulay(term = 'Glaucis')
 
 df1 <- query_macaulay(term = 'Glaucis dohrnii')
 df1 <- query_macaulay(term = 'Turdus grayi')
