--- a/TO_DO_LIST.Rmd
+++ b/TO_DO_LIST.Rmd
@@ -6,8 +6,8 @@ editor_options:
 ---
 
 
-* update clements 2024
-* Control + shift + A to all code (might not fix long code lines)
+* update clements 2024 ✓
+* Control + shift + A to all code (might not fix long code lines) ✓
 * update past queries
 * continue failed queries
 * check downloads from download_media 
