--- a/vignettes/suwo_vignette.Rmd
+++ b/vignettes/suwo_vignette.Rmd
@@ -77,6 +77,7 @@ options(width = 100, max.print = 100)
 
 ```
 
+
 suwo is intended to facilitate the acquisition of observational data from multiple databases available on the internet. These databases include Inaturalist, Observation, Wikiaves, Xenocanto, Macaulay Library and GBIF. This vignette provides a general overview of the download of data using the suwo query functions and the analysis of the metadata. Some results may not appear because of missing links in the database consulted or deleted observations that no longer are available.
 
 The package can be installed from CRAN as follows:
@@ -103,52 +104,125 @@ library(suwo)
 
 ```
 
+Listed below are the different query functions and the available information for each.
+
+```{r, eval = FALSE}
+
+# Build a data frame summarizing the query_* functions
+
+query_summary <- data.frame(
+  function_name = c("query_gbif", "query_inaturalist", "query_macaulay",
+                    "query_observation", "query_wikiaves", "query_xenocanto"),
+  
+  requires_token = c("No", "No", "No", "Yes", "No", "No"),
+  
+  file_types = c("sound, still image, moving image, interactive resource",
+                 "sound, still image",
+                 "audio, photo, video",
+                 "sound, still image",
+                 "sound, still image",
+                 "sound"),
+  
+  taxonomic_range = c("species", "species", "species, subspecies",
+                      "species", "species", "species, genus, family"),
+  
+  max_results = c("not specified", "not specified", "not specified",
+                  "not specified", "not specified", "not specified"),
+  
+  geographic_coverage = c("worldwide", "worldwide", "worldwide",
+                          "worldwide", "Brazil", "worldwide"),
+  
+  additional_data = c(
+    "coordinates, date, country, taxonomic keys, multimedia metadata, locality, license, etc.",
+    "time observed, geoprivacy, species_guess, votes, location, date, file URL, repository, etc.",
+    "scientific name, group, status, rarity, info text, permalink, file URL, repository",
+    "scientific name, group, status, rarity, info text, permalink, file URL, repository",
+    "species info, user, date, location, comments, likes, URL, repository",
+    "genus, species, subspecies, location, coordinates, recordist, file URL, license, date, etc."
+  ),
+  
+  stringsAsFactors = FALSE
+)
+
+# Print the table
+print(query_summary, row.names = FALSE)
+
+
+```
+
+
 Finding data using suwo follows a basic sequence. First a database is selected and the corresponding query function is used to search for the data needed.
 
 
 A search query consists of a term (species name), a data type that corresponds to the type of data the user wishes to search for. Depending on the search function, this can vary from pictures, videos, sounds. The all_data parameter determines if all the data present for the search is included or if a summary of the metadata is generated as the output of the query. Queries may me made to any of the six available query functions that connect to one repository.
 
+Case Study: Analyzing the distribution Honduran White Bat (Ectophylla alba)
+
+Let's say we'd like to analyze the geographic distribution of the Honduran White Bat, as well
+as obtain information on the appearance and sound emited by the species. We can use the query functions
+available in suwo to find this information.
+
+First, we can obtain data observational data and media from the query functions by
+searching for information on GBIF, INaturalist and Xenocanto.
+
 ```{r, eval = TRUE, echo = TRUE}
 
-inat <- query_inaturalist(term = "Calochortus plummerae", type = "still image")
+# Get occurrence data from GBIF
+ectophylla_gbif <- query_gbif(term = "Ectophylla alba", type = "still image")
 
-#Queries from observation.org require a token provided by the observation.org website through a terminal request
-#query_result_Observation <- query_observation(term = 'Turdus iliacus', type = "Sound", token = ".....")
+# Get observations from iNaturalist
+ectophylla_inat <- query_inaturalist(term = "Ectophylla alba", type = "still image")
 
-#Queries from Macaulay require user confirmation after download of the csv file that contains the information from the search in the Macaulay library.
-#query_result_Macaulay <- query_macaulay(term = 'Turdus iliacus', type = "audio")
+# Get audio recordings from xeno-canto
+ectophylla_xc <- query_xenocanto(term = "Ectophylla alba")
 
-aga_cal_gbif <- query_gbif(term = 'Agalychnis callidryas', type = "sound")
-
-phae_natt_wka <- query_wikiaves(term = "Phaethornis nattereri", type = "sound")
-
-phae_natt_xc <- query_xenocanto(term = "Phaethornis nattereri")
 ```
 
-The function update_query allows users to update previous searches from the same function to obtain new data starting from the last search. The previous search must be loaded as an rds file because it uses the attributes of the dataframe.
+When past searches must be checked for new information, the function update_query allows users to update previous searches from the same function to obtain new data starting from the last search. The previous search must be loaded as an rds file because it uses the attributes of the dataframe.
 
 ```{r}
 
-updated_query_result_xenocanto  <- update_query(previous_query = phae_natt_xc)
+#Remove one row from previous query
+ectohpylla_xc <- ectophylla_xc[-1, ]
+#Update the query
+updated_query_result_xenocanto  <- update_query(previous_query = ectophylla_xc)
 
 ```
 
-Metadata can be used to download the available files from the data stored from the query. This can be done utilizing the function download_media. This function may take a longer time to run depending on the available resources and the amount of data that needs to be downloaded.
+Metadata can be used to download the available files from the data stored from the query. This can be done utilizing the function download_media. This function may take a longer time to run depending on the available resources and the amount of data that needs to be downloaded. This information can be used to run computer vision analysis on the appearance of the species or to analyze the sound structure of the echolocation emitted by the Honduran White Bat.
 
 ```{r, eval = TRUE}
+#Download media for audios from the query from Xenocanto
+paths_aud <- download_media(ectophylla_xc)
+#Download media for still images from the query from GBIF
+paths_img <- download_media(ectophylla_gbif)
 
-paths <- download_media(phae_natt_wka)
+paths_aud
 
-paths
+paths_img
 ```
 
 When checking between repository metadata, users may use the function detect_duplicates to identify and eliminate the repeated observations. This function can return a merged data frame without the repeated observations, or just identify the repetitions.
 
 ```{r}
 
-Merged_Dataframe <- detect_duplicates(X = phae_natt_wka, Y = phae_natt_xc)
+Merged_Dataframe <- detect_duplicates(X = ectophylla_gbif, Y = ectophylla_inat)
+
+# Simulate user input "y"
+userinput <- "y"
 
 ```
+
+Users may display the coordinate information of the observations from a query using the map_locations function. This will allow the user to show the locations of the observations on a map.
+
+```{r}
+
+# create map
+map_locations(ectophylla_inat)
+
+```
+
+Some notes for specific searches
 
 The GBIF repository dataset may me consulted to filter what repositories the user would like to consult specifically. This may be viewed by downloading the data using the function check_gbif_dataset. This function downloads the csv of the complete repository list available on GBIF.
 
@@ -158,24 +232,14 @@ check_gbif_datasets()
 
 ```
 
-Users may display the coordinate information of the observations from a query using the map_locations function. This will allow the user to show the locations of the observations on a map.
-
-```{r}
-
-metadata <- query_xenocanto(term = "Phaethornis anthophilus")
-
-# create map
-map_locations(metadata)
-
-```
 
 A query search may require a taxon code to correctly display the species observation data. This information can be consulted using the taxon_code_search function that consults the clements database
 
 ```{r}
 
-taxon_code_turdus <- taxon_code_search(term = "Turdus iliacus")
+taxon_code_pharomachrus <- taxon_code_search(term = "Pharomachrus mocinno")
 
-taxon_code_turdus
+taxon_code_pharomachrus
 
 ```
 
