--- a/vignettes/suwo_vignette.Rmd
+++ b/vignettes/suwo_vignette.Rmd
@@ -5,7 +5,7 @@ pagetitle: Access nature media from online repositories
 author: 
 - <a href="https://marce10.github.io/">Marcelo Araya-Salas, PhD</a>
 - Jorge Elizondo
-date:  "`r Sys.Date()`"
+date:  "r Sys.Date()"
 output:
   rmarkdown::html_document:
     self_contained: yes
@@ -19,7 +19,9 @@ vignette: >
    %\usepackage[utf8]{inputenc}
    %\VignetteEncoding{UTF-8}
    %\VignetteDepends{Rraven}
-   %\VignetteDepends{viridis}   
+   %\VignetteDepends{viridis}
+   %\VignetteDepends{suwo}
+   %\VignetteDepends{kableExtra}
    %\VignetteEngine{knitr::rmarkdown}     
 editor_options: 
   chunk_output_type: console
@@ -35,33 +37,29 @@ library(knitr)
 library(htmlwidgets)
 library(suwo)
 
-# create custom printing method
+# Create custom printing method
 .print_df <- function(x, highlight = NULL, ...) {
   kbl <- kableExtra::kable(
     head(as.data.frame(x)),
     align = "c",
-    row.names = F,
+    row.names = FALSE,
     format = "html",
-    escape = F
+    escape = FALSE
   )
   
   if (!is.null(highlight))
-  kbl <- column_spec(kbl, column = which(names(x) %in% highlight), background = "#ccebff", bold = TRUE)
+    kbl <- column_spec(kbl, column = which(names(x) %in% highlight), background = "#ccebff", bold = TRUE)
   
-  kbl <-
-    kableExtra::kable_styling(kbl, bootstrap_options = "striped", font_size = 14)
-
-  
-  kbl <-
-    kableExtra::scroll_box(kbl, width = "100%", height = "300px")
+  kbl <- kableExtra::kable_styling(kbl, bootstrap_options = "striped", font_size = 14)
+  kbl <- kableExtra::scroll_box(kbl, width = "100%", height = "300px")
   
   asis_output(kbl)
 }
 
-# register data frame printing method
+# Register custom data frame print method
 registerS3method("knit_print", "data.frame", .print_df)
 
-# global option chunks
+# Global chunk options
 knitr::opts_chunk$set(
   fig.width = 5, 
   fig.height = 3.5,
@@ -75,12 +73,17 @@ knitr::opts_chunk$set(
 
 options(width = 100, max.print = 100)
 
+
 ```
 
 
-suwo is intended to facilitate the acquisition of observational data from multiple databases available on the internet. These databases include Inaturalist, Observation, Wikiaves, Xenocanto, Macaulay Library and GBIF. This vignette provides a general overview of the download of data using the suwo query functions and the analysis of the metadata. Some results may not appear because of missing links in the database consulted or deleted observations that no longer are available.
+The suwo package is designed to simplify the retrieval of observational and media data for species across multiple online biodiversity databases, including GBIF, iNaturalist, Macaulay Library, Wikiaves, Xeno-Canto, and Observation.org. This vignette provides an overview of the package’s core querying functions and demonstrates how to work with species metadata, especially for projects involving bioacoustics or species distribution modeling.
 
-The package can be installed from CRAN as follows:
+Some queries may not return results due to missing links or removed records in the consulted databases.
+
+Installation
+
+Install from CRAN:
 
 ```{r, eval = FALSE}
 
@@ -93,7 +96,8 @@ library(suwo)
 
 ```
 
-To install the latest developmental version from github you will need the R package remotes:
+Or install the latest development version from GitHub:
+
 ```{r, eval = FALSE}
 
 # install package
@@ -104,48 +108,54 @@ library(suwo)
 
 ```
 
-Listed below are the different query functions and the available information for each.
+Query Functions Overview
+The following table summarizes the available suwo query functions and the types of metadata they retrieve:
 
-```{r, eval = FALSE}
+```{r query_summary_table, echo=FALSE, results='asis', message=FALSE}
 
-# Build a data frame summarizing the query_* functions
+library(knitr)
+library(kableExtra)
 
 query_summary <- data.frame(
-  function_name = c("query_gbif", "query_inaturalist", "query_macaulay",
-                    "query_observation", "query_wikiaves", "query_xenocanto"),
-  
-  requires_token = c("No", "No", "No", "Yes", "No", "No"),
-  
-  file_types = c("sound, still image, moving image, interactive resource",
-                 "sound, still image",
-                 "audio, photo, video",
-                 "sound, still image",
-                 "sound, still image",
-                 "sound"),
-  
-  taxonomic_range = c("species", "species", "species, subspecies",
-                      "species", "species", "species, genus, family"),
-  
-  max_results = c("not specified", "not specified", "not specified",
-                  "not specified", "not specified", "not specified"),
-  
-  geographic_coverage = c("worldwide", "worldwide", "worldwide",
-                          "worldwide", "Brazil", "worldwide"),
-  
-  additional_data = c(
-    "coordinates, date, country, taxonomic keys, multimedia metadata, locality, license, etc.",
-    "time observed, geoprivacy, species_guess, votes, location, date, file URL, repository, etc.",
-    "scientific name, group, status, rarity, info text, permalink, file URL, repository",
-    "scientific name, group, status, rarity, info text, permalink, file URL, repository",
-    "species info, user, date, location, comments, likes, URL, repository",
-    "genus, species, subspecies, location, coordinates, recordist, file URL, license, date, etc."
+  `Function` = c("query_gbif", "query_inaturalist", "query_macaulay",
+                 "query_observation", "query_wikiaves", "query_xenocanto"),
+  `Requires Token` = c("No", "No", "No", "Yes", "No", "No"),
+  `File Types` = c("sound, still image, moving image, interactive resource",
+                   "sound, still image", "audio, photo, video",
+                   "sound, still image", "sound, still image", "sound"),
+  `Taxonomic Range` = c("species", "species", "species, subspecies",
+                        "species", "species", "species, genus, family"),
+  `Max Results` = rep("not specified", 6),
+  `Geographic Coverage` = c("worldwide", "worldwide", "worldwide",
+                            "worldwide", "Brazil", "worldwide"),
+  `Additional Data` = c(
+    "key, datasetKey, publishingOrgKey, installationKey, hostingOrganizationKey, publishingCountry, protocol, lastCrawled, lastParsed, crawlId, basisOfRecord, occurrenceStatus, taxonKey, kingdomKey, phylumKey, classKey, orderKey, familyKey, genusKey, speciesKey, acceptedTaxonKey, scientificName, acceptedScientificName, kingdom, phylum, order, family, genus, species, genericName, specificEpithet, taxonRank, taxonomicStatus, iucnRedListCategory, dateIdentified, decimalLatitude, decimalLongitude, coordinateUncertaintyInMeters, continent, stateProvince, year, month, day, eventDate, modified, lastInterpreted, references, license, isInCluster, datasetName, recordedBy, identifiedBy, geodeticDatum, class, countryCode, country, rightsHolder, identifier, http...unknown.org.nick, verbatimEventDate, verbatimLocality, collectionCode, gbifID, occurrenceID, taxonID, catalogNumber, institutionCode, eventTime, occurrenceRemarks, http...unknown.org.captive, identificationID, identificationRemarks, distanceFromCentroidInMeters, informationWithheld, sex, lifeStage, preparations, nomenclaturalCode, dynamicProperties, locality, vernacularName, fieldNotes, verbatimElevation, behavior, higherClassification, associatedTaxa, infraspecificEpithet, media-type, media-format, media-references, media-created, media-creator, media-publisher, media-license, media-rightsHolder, file_url, media-description, page, elevation, elevationAccuracy, organismQuantity, organismQuantityType, georeferenceProtocol, verbatimSRS, county, verbatimCoordinateSystem, type, collectionID, individualCount, samplingProtocol, scientificNameID, georeferenceRemarks, language, georeferenceSources, media-title, repository"
+,
+    "quality_grade, time_observed_at, taxon_geoprivacy, uuid, id, cached_votes_total, identifications_most_agree, species_guess, identifications_most_disagree, positional_accuracy, comments_count, site_id, created_time_zone, license_code, observed_time_zone, public_positional_accuracy, oauth_application_id, created_at, description, time_zone_offset, observed_on, observed_on_string, updated_at, captive, faves_count, num_identification_agreements, map_scale, uri, community_taxon_id, owners_identification_from_vision, identifications_count, obscured, num_identification_disagreements, geoprivacy, location, spam, mappable, identifications_some_agree, place_guess, file_url, attribution, page, repository"
+,
+    "id, scientific_name, name, group, group_name, status, rarity, photo, info_text, permalink, determination_requirements, file_url, repository"
+,
+    "id, scientific_name, name, group, group_name, status, rarity, photo, info_text, permalink, determination_requirements, file_url, repository"
+,
+    "recording ID, media type, user ID, species ID, scientific name, common name, repository ID, author, user name, date, verified condition, location, location ID, comments, likes, visualizations, url, duration and repository"
+,
+    "recording ID, Genus, Specific epithet, Subspecies, English name, Recordist, Country, Locality, Latitude, Longitude, Vocalization type, Audio file, License, URL, Quality, Time, Date, Sound files in .mp3"
+
   ),
-  
   stringsAsFactors = FALSE
 )
 
-# Print the table
-print(query_summary, row.names = FALSE)
+query_summary |>
+  kbl(
+    caption = "Table: Summary of query functions and available metadata.",
+    format = "html",
+    escape = TRUE
+  ) |>
+  kable_styling(
+    bootstrap_options = c("striped", "hover", "condensed", "responsive"),
+    full_width = FALSE,
+    position = "left"
+  )
 
 
 ```
@@ -153,14 +163,13 @@ print(query_summary, row.names = FALSE)
 
 Finding data using suwo follows a basic sequence. First a database is selected and the corresponding query function is used to search for the data needed.
 
-
 A search query consists of a term (species name), a data type that corresponds to the type of data the user wishes to search for. Depending on the search function, this can vary from pictures, videos, sounds. The all_data parameter determines if all the data present for the search is included or if a summary of the metadata is generated as the output of the query. Queries may me made to any of the six available query functions that connect to one repository.
 
-Case Study: Analyzing the distribution Honduran White Bat (Ectophylla alba)
+Case Study: Observations of the Honduran White Bat (Ectophylla alba)
+The Honduran White Bat is a rare, visually striking species found in Central America. It constructs tents from Heliconia leaves and emits distinct ultrasonic vocalizations. Using suwo, we can easily gather observational data, photos, and sound recordings of this species from various public databases.
 
-Let's say we'd like to analyze the geographic distribution of the Honduran White Bat, as well
-as obtain information on the appearance and sound emited by the species. We can use the query functions
-available in suwo to find this information.
+Let's say we'd like to analyze the geographic distribution of this species, as well
+as obtain information on the appearance and sound emited by the species.
 
 First, we can obtain data observational data and media from the query functions by
 searching for information on GBIF, INaturalist and Xenocanto.
@@ -178,6 +187,29 @@ ectophylla_xc <- query_xenocanto(term = "Ectophylla alba")
 
 ```
 
+```{r}
+
+library(knitr)
+library(kableExtra)  # <- Make sure this is loaded!
+
+kable_styling(
+  kable(head(ectophylla_gbif, 2), caption = "First 2 rows from GBIF"),
+  bootstrap_options = c("striped", "hover")
+)
+
+kable_styling(
+  kable(head(ectophylla_inat, 2), caption = "First 2 rows from iNaturalist"),
+  bootstrap_options = c("striped", "hover")
+)
+
+kable_styling(
+  kable(head(ectophylla_xc, 2), caption = "First 2 rows from Xeno-Canto"),
+  bootstrap_options = c("striped", "hover")
+)
+
+```
+
+
 When past searches must be checked for new information, the function update_query allows users to update previous searches from the same function to obtain new data starting from the last search. The previous search must be loaded as an rds file because it uses the attributes of the dataframe.
 
 ```{r}
@@ -191,7 +223,16 @@ updated_query_result_xenocanto  <- update_query(previous_query = ectophylla_xc)
 
 Metadata can be used to download the available files from the data stored from the query. This can be done utilizing the function download_media. This function may take a longer time to run depending on the available resources and the amount of data that needs to be downloaded. This information can be used to run computer vision analysis on the appearance of the species or to analyze the sound structure of the echolocation emitted by the Honduran White Bat.
 
+We'll subset the image dataset from INaturalist to speed up the download process.
+
 ```{r, eval = TRUE}
+
+ectophylla_gbif <- ectophylla_gbif[1:10, ]
+
+```
+
+
+```{r, eval = TRUE, echo = FALSE}
 #Download media for audios from the query from Xenocanto
 paths_aud <- download_media(ectophylla_xc)
 #Download media for still images from the query from GBIF
@@ -208,8 +249,6 @@ When checking between repository metadata, users may use the function detect_dup
 
 Merged_Dataframe <- detect_duplicates(X = ectophylla_gbif, Y = ectophylla_inat)
 
-# Simulate user input "y"
-userinput <- "y"
 
 ```
 
@@ -233,7 +272,7 @@ check_gbif_datasets()
 ```
 
 
-A query search may require a taxon code to correctly display the species observation data. This information can be consulted using the taxon_code_search function that consults the clements database
+A query search may require a taxon code to correctly display the species observation data. This information can be consulted using the taxon_code_search function that consults the Clements database
 
 ```{r}
 
@@ -243,7 +282,7 @@ taxon_code_pharomachrus
 
 ```
 
-
+Lastly, users are advised to save their searches as an RDS so that they may keep the relevant metadata available for further use.
 
 <font size="4">Session information</font>
 
